[package]
name = "curio-mainnet-runtime"
version = "1.0.0"
authors = ["Curio Capital AG"]
description = "A Curio Parachain Mainnet Runtime."
edition = "2021"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
hex-literal = { workspace = true, optional = true }
log.workspace = true
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec.workspace = true
static_assertions.workspace = true

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api.workspace = true
frame-try-runtime = { workspace = true, optional = true }
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-bounties.workspace = true
pallet-collective.workspace = true
pallet-democracy.workspace = true
pallet-elections-phragmen.workspace = true
pallet-identity.workspace = true
pallet-indices.workspace = true
pallet-membership.workspace = true
pallet-multisig.workspace = true
pallet-preimage.workspace = true
pallet-proxy.workspace = true
pallet-scheduler.workspace = true
pallet-session.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-tips.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-treasury.workspace = true
pallet-utility.workspace = true
pallet-vesting.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-std.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true

# Polkadot
pallet-xcm.workspace = true
polkadot-parachain.workspace = true
polkadot-runtime-common.workspace = true
xcm.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true

# Cumulus
cumulus-pallet-aura-ext.workspace = true
cumulus-pallet-dmp-queue.workspace = true
cumulus-pallet-parachain-system.workspace = true
cumulus-pallet-session-benchmarking.workspace = true
cumulus-pallet-xcm.workspace = true
cumulus-pallet-xcmp-queue.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-timestamp.workspace = true
cumulus-primitives-utility.workspace = true
pallet-collator-selection.workspace = true
parachain-info.workspace = true

# Curio
orml-tokens.workspace = true
orml-traits.workspace = true
pallet-bridge.workspace = true
pallet-dex.workspace = true
pallet-currencies.workspace = true
primitives.workspace = true
parachain-staking.workspace = true
parachain-staking-runtime-api.workspace = true
module-currency-id.workspace = true
bstringify.workspace = true

# Acala
module-transaction-pause.workspace = true
# Actually it is a dependency of `module-transaction-pause` but we
# import this explicitly to turn on `try-runtime` feature which is
# not passed for this module from `module-transaction-pause/try-runtime`
acala-primitives.workspace = true

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"module-currency-id/std",
	"module-transaction-pause/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-bridge/std",
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-collator-selection/std",
	"pallet-currencies/std",
	"pallet-democracy/std",
	"pallet-dex/std",
	"pallet-elections-phragmen/std",
	"pallet-identity/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachain-staking/std",
	"parachain-staking-runtime-api/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"primitives/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-bridge/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-currencies/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-dex/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachain-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"acala-primitives/try-runtime",
	"frame-executive/try-runtime",
	"frame-try-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"parachain-info/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-bridge/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-currencies/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-dex/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-session/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-staking/try-runtime",
	"module-transaction-pause/try-runtime",
	"orml-tokens/try-runtime",
	"sp-runtime/try-runtime",
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
]
