[package]
authors = ["Curio Capital AG"]
edition = "2021"
license = "GPL-3.0"
version = "1.9.0"
name = "parachain-staking-runtime-api"

[dependencies]
# External dependencies
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate dependencies
sp-api.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-runtime/std",
  "scale-info/std",
]